@@ -76,7 +76,7 @@ namespace Rivet {
       ostringstream os;
       os << "* Two different beam energies: sqrt(s) = 630 & 1800 GeV\n"
          << "* Event type: generic QCD events\n"
-         << "* Several pT_min cutoffs are probably required to fill the profile"
+         << "* Several pTmin cutoffs are probably required to fill the profile"
          << "  histograms, e.g.\n\n"
          << "  * { 0 (min bias), 30, 90, 150 GeV } at 1800 GeV; and\n"
          << "  * { 0 (min bias), 20, 90, 150 GeV } at 630 GeV";
