@@ -68,16 +68,16 @@ namespace Rivet {
     string description() const {
       ostringstream os;
       os << "A measurement of the shapes of b-jets using 300 pb$^{-1}$ "
-	 << "of data obtained with CDF II in $p\\bar{p}$ collisions at "
-	 << "$\\sqrt{s}=1.96$ TeV. The measured quantity is the average "
-	 << "integrated jet shape, which is computed over an ensemble of "
-	 << "jets. This quantity is expressed as "
-	 << "$\\Psi(r/R) = \\langle\\frac{p_T(0 \\rightarrow r)}"
+         << "of data obtained with CDF II in $p\\bar{p}$ collisions at "
+         << "$\\sqrt{s}=1.96$ TeV. The measured quantity is the average "
+         << "integrated jet shape, which is computed over an ensemble of "
+         << "jets. This quantity is expressed as "
+         << "$\\Psi(r/R) = \\langle\\frac{p_T(0 \\rightarrow r)}"
          << "{p_T(0 \\rightarrow R)}\\rangle$, "
          << "where pT (0$\\rightarrow$r) is the scalar sum of the "
-	 << "transverse momenta of all objects inside a sub-cone of "
-	 << "radius r around the jet axis. The integrated shapes are "
-	 << "by definition normalized such that  $\\Psi(r/R =1) =1$. "
+         << "transverse momenta of all objects inside a sub-cone of "
+         << "radius r around the jet axis. The integrated shapes are "
+         << "by definition normalized such that  $\\Psi(r/R =1) = 1$. "
          << "\n "   
          << "The measurement is done in bins of jet pT in the range "
          << "52 to 300 GeV/c. The jets have $|\\eta| < 0.7$. "
@@ -90,8 +90,8 @@ namespace Rivet {
   /// Characteristics of events to be processed by this analysis
     string runInfo() const {
       ostringstream os;
-      os << "Requires  $2\\rightarrow{2}$ QCD scattering processes."
-         << "The minimum jet Et is 52 GeV, so a cut on kinematic pTmin"
+      os << "Requires  $2\\rightarrow{2}$ QCD scattering processes. "
+         << "The minimum jet Et is 52 GeV, so a cut on kinematic pTmin "
          << "may be required for good statistics.";
       return os.str();
     }
