@@ -57,9 +57,9 @@ namespace Rivet {
     string description() const {
       ostringstream os;
       os << "Cross sections as a function of pT of the vector boson "
-         << "inclusive and in forward region (|y| > 2, pT < 30 GeV)"
+         << "inclusive and in forward region ($|y| > 2, pT < 30 GeV$)"
          << "in ppbar collisions at sqrt{s} = 1.96 TeV, based on "
-         << "an integrated luminosity of 0.98 fb^-1.";
+         << "an integrated luminosity of 0.98 fb$^{-1}$.";
       return os.str();
     }
     /// Information about the events needed as input for this analysis.
@@ -67,7 +67,7 @@ namespace Rivet {
       ostringstream os;
       os << "Tevatron Run 2 conditions:\n"
          << "* ppbar -> e+ e- + jets at 1960 GeV.\n"
-         << "* Needs mass cut on lepton pair to avoid photon singularity: min. range $40 < m_ee < 200$";
+         << "* Needs mass cut on lepton pair to avoid photon singularity: m in range $40 < m_ee < 200$ GeV";
       return os.str();
     }
     string status() const {
